// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditTrip /> should render component 1`] = `
<div
  className="edit-review-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Edit review
    </h2>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Title:
      </span>
      <input
        className=""
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Trip to:
      </span>
      <CountrySelector
        defaultCountry=""
        getSelectedCountry={[Function]}
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Description:
      </span>
      <Editor
        editorClassName="editor-self"
        editorState={Object {}}
        onEditorStateChange={[Function]}
        toolbar={Object {}}
        wrapperClassName="editor-wrapper "
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Duration (days):
      </span>
      <input
        className=""
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Expences ($):
      </span>
      <input
        className=""
        name="expences"
        onChange={[Function]}
        placeholder="Enter Price"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        error=""
        onChange={[Function]}
        rating={0}
      />
    </div>
    <button
      type="submit"
    >
      Edit review
    </button>
    <div
      className="delete_post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete review
      </div>
    </div>
  </form>
</div>
`;

exports[`<EditTrip /> should render component with postDeleted 1`] = `
<div
  className="edit-review-container"
>
  <div
    className="red_tag"
  >
    Post Deleted
  </div>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Edit review
    </h2>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Title:
      </span>
      <input
        className=""
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Trip to:
      </span>
      <CountrySelector
        defaultCountry=""
        getSelectedCountry={[Function]}
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Description:
      </span>
      <Editor
        editorClassName="editor-self"
        editorState={Object {}}
        onEditorStateChange={[Function]}
        toolbar={Object {}}
        wrapperClassName="editor-wrapper "
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Duration (days):
      </span>
      <input
        className=""
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Expences ($):
      </span>
      <input
        className=""
        name="expences"
        onChange={[Function]}
        placeholder="Enter Price"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        error=""
        onChange={[Function]}
        rating={0}
      />
    </div>
    <button
      type="submit"
    >
      Edit review
    </button>
    <div
      className="delete_post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete review
      </div>
    </div>
  </form>
</div>
`;

exports[`<EditTrip /> should render component with updatedTrip and errors 1`] = `
<div
  className="edit-review-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Edit review
    </h2>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Title:
      </span>
      <input
        className="field-error"
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="error"
    >
      title error
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Trip to:
      </span>
      <CountrySelector
        defaultCountry=""
        getSelectedCountry={[Function]}
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Description:
      </span>
      <Editor
        editorClassName="editor-self"
        editorState={Object {}}
        onEditorStateChange={[Function]}
        toolbar={Object {}}
        wrapperClassName="editor-wrapper field-error"
      />
    </div>
    <div
      className="error"
    >
      description error
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Duration (days):
      </span>
      <input
        className="field-error"
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="error"
    >
      duration error
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Expences ($):
      </span>
      <input
        className="field-error"
        name="expences"
        onChange={[Function]}
        placeholder="Enter Price"
        type="number"
        value=""
      />
    </div>
    <div
      className="error"
    >
      expences error
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        error="field-error"
        onChange={[Function]}
        rating={0}
      />
    </div>
    <div
      className="error"
    >
      rating error
    </div>
    <button
      type="submit"
    >
      Edit review
    </button>
    <div
      className="delete_post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete review
      </div>
    </div>
  </form>
</div>
`;
